# multi-agent-workflow

./: .gitignore  CLAUDE.md  Makefile  README.md  init.sh  pyproject.toml
.vk/: dev.sh  dispatcher.json  maw_dir  status_map.json
dispatcher/: __init__.py  __main__.py  core.py  github.py  vk.py  vk_db.py
docs/: 01_需求说明.md  02_架构设计.md  03_现状调研.md  04_VK_MCP手册.md  AGENT_HANDOFF.md  analysis_report.md
scripts/: agent-quality-gate.sh  check-worktree-conflicts.sh  install-hooks.sh  post-merge-verify.sh  scan-secrets.sh  vk-hooks.sh  vk-pre-push-hook.sh
templates/: CLAUDE.md.tmpl  Makefile.append  claude_dispatcher_check.md  dev.sh  gitignore.append  pyproject.toml.tmpl  vscode-mcp.json
templates/vk/: dispatcher.json  workflow.md
templates/vk/prompts/: coder.md  planner.md  reviewer.md
templates/vk/reports/: .gitignore
tests/: test-scan-secrets.sh
